[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "airbyte-destination-databricks-py"
version = "0.1.0"
description = "Airbyte destination implementation for Databricks (python)."
authors = ["Leonid Kozhinov <lkozhinov@toloka.ai>"]
license = "MIT"
readme = "README.md"
documentation = ""
homepage = "https://airbyte.com"
repository = "https://github.com/toloka-dev/airbyte-connectors"

[[tool.poetry.source]]
name = "azure"
url = "https://pkgs.dev.azure.com/toloka/_packaging/Python/pypi/simple/"
priority = "primary"

[[tool.poetry.packages]]
include = "destination_databricks_py"

[tool.poetry.dependencies]
python = "^3.9"
airbyte-cdk = "*"
dbxio = "0.0.18"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.2,<7.0"
pytest-docker = "2.0.1"
docker = "*"
ruff = "^0.3.2"
mypy = "^1.9.0"

[tool.poetry.scripts]
destination-databricks = "destination_databricks_py.run:run"